# llmask

./: .gitignore  Makefile  cli.py  llmask  manage.py  pyproject.toml
llmask/: __init__.py  asgi.py  cache.py  cli.py  settings.py  urls.py  wsgi.py
llmask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
model_ask/: apps.py  forms.py  models.py  urls.py  views.py
model_ask/migrations/: 0001_initial.py  0002_delete_interaction.py
model_ask/templates/model_ask/: interaction_form.html  interaction_result.html
model_manager/: admin.py  models.py  urls.py  views.py
model_manager/migrations/: 0001_initial.py  0002_llm_slug.py  0003_alter_llm_slug.py  0004_llm_unique_provider_model_llm_unique_slug.py  0005_delete_llm.py
model_manager/templates/: llm_confirm_delete.html  llm_form.html  llm_list.html
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/5/: 1247  1249  1259  16388  16389  16393  16394  16396  16397  16400  16402  16404  16405  16408  16410  16414  16416  16418  16422  16424  16425  16428  16430  16432  16438  16442  16444  16451  (+53 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
sohbat/: admin.py  apps.py  llmapis.py  models.py  views.py
sohbat/migrations/: 0001_initial.py  0002_systemprompt_name.py  0003_alter_interaction_random_seed.py  0004_interaction_unique_interaction.py  0005_remove_llm_unique_slug_and_more.py  0006_alter_interaction_user_prompt_delete_userprompt.py  0007_alter_interaction_random_seed.py
sohbat/templates/: interaction_detail.html  interaction_form.html
