[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmask"
version = "0.1"
description = "A simple CLI tool"
dependencies = ["openai", "groq"]

[project.scripts]
llmbash = "llmask:cli_bash"
llmdefine = "llmask:cli_define"
llmvim = "llmask:cli_vim"
llmstat = "llmask:cli_stat"
